# esp-h264-component

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  idf_component.yml
.github/workflows/: issue_comment.yml  new_issues.yml  new_prs.yml  upload_component.yml
.gitlab/ci/: build.yml  pre_check.yml  test_deploy.yml
esp_h264/: CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  idf_component.yml  linker.lf
esp_h264/hw/hal/esp32p4/: h264_dma_hal.c  h264_dma_hal.h  h264_dma_ll.h  h264_hal.c  h264_hal.h  h264_ll.h
esp_h264/hw/include/: esp_h264_enc_dual_hw.h  esp_h264_enc_single_hw.h
esp_h264/hw/soc/esp32p4/: h264_dma_struct.h  h264_struct.h
esp_h264/hw/src/: esp_h264_enc_dual_hw.c  esp_h264_enc_hw_param.c  esp_h264_enc_hw_param.h  esp_h264_enc_single_hw.c  h264_nal.c  h264_rc.c
esp_h264/interface/include/: esp_h264_enc_dual.h  esp_h264_enc_param_hw.h  esp_h264_enc_single.h  esp_h264_types.h  esp_h264_version.h
esp_h264/interface/src/: esp_h264_dec.c  esp_h264_enc_param.c  esp_h264_enc_param_hw.c  esp_h264_enc_single.c  esp_h264_version.c
esp_h264/port/inc/: esp_h264_intr_alloc.h
esp_h264/port/include/: esp_h264_alloc.h
esp_h264/port/src/: esp_h264_alloc.c  esp_h264_alloc_less_than_5_3.c
esp_h264/sw/include/: esp_h264_dec_sw.h  esp_h264_enc_single_sw.h
esp_h264/sw/libs/openh264_inc/: codec_api.h  codec_app_def.h  codec_def.h
esp_h264/sw/libs/tinyh264_inc/: basetype.h  h264bsd_decoder.h
esp_h264/sw/src/: esp_h264_dec_sw.c  esp_h264_enc_single_sw.c  esp_h264_enc_sw_param.h  h264_color_convert.c  h264_color_convert.h
esp_h264/sw/src/asm/esp32s3/: h264_color_convert.S
esp_h264/test_apps/: .build-test-rules.yml  pytest_h264.py  sdkconfig.defaults  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s3
esp_h264/test_apps/main/: CMakeLists.txt  esp_h264_hw_enc_test.c  esp_h264_hw_enc_test.h  esp_h264_sw_dec_test.c  esp_h264_sw_dec_test.h  esp_h264_sw_enc_test.c  esp_h264_sw_enc_test.h  h264_io.c  h264_io.h  idf_component.yml  test_app_main.c  test_case.c
hw/hal/esp32p4/: h264_dma_ll.h
hw/src/: esp_h264_enc_dual_hw.c  esp_h264_enc_single_hw.c  h264_nal.h  h264_rc.h
interface/include/: esp_h264_dec.h  esp_h264_dec_param.h  esp_h264_enc_param.h  esp_h264_types.h  esp_h264_version.h
interface/src/: esp_h264_dec_param.c  esp_h264_enc_dual.c
port/inc/: esp_h264_cache.h  esp_h264_check.h  esp_h264_mutex.h
port/include/: esp_h264_alloc.h
port/src/: esp_h264_alloc.c  esp_h264_cache.c
sw/include/: esp_h264_dec_sw.h  esp_h264_enc_single_sw.h
sw/libs/openh264_inc/: codec_app_def.h  codec_def.h
sw/libs/tinyh264_inc/: basetype.h  h264bsd_decoder.h
sw/src/: esp_h264_enc_single_sw.c  esp_h264_enc_sw_param.c
sw/src/asm/esp32s3/: h264_color_convert.S
test_apps/: CMakeLists.txt
test_apps/main/: CMakeLists.txt  esp_h264_hw_enc_test.c  esp_h264_hw_enc_test.h  esp_h264_sw_dec_test.h  esp_h264_sw_enc_test.h  h264_io.c  h264_io.h  test_app_main.c  test_case.c
tools/ci/: build_apps.py  check_copyright_config.yaml
